# bit-international-students

./: .env.example  .gitignore  Caddyfile  DEEPAGENTS_CORPUS_FILESYSTEM_TUTORIAL.md  LICENSE  README.md  docker-compose.tunnel.yml  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  agent.py  api.py  config.py  corpus.py  main.py  prompts.py  question_answer_log.py  schemas.py  tools.py
backend/app/corpus/professors/: index.md
backend/app/corpus/professors/aerospace-engineering/: bi-sifeng.md  chen-shaohua.md  dong-chunying.md  guo-yuntao.md  he-guosheng.md  he-shaoming.md  hong-jiawang.md  hu-gengkai.md  hu-haiyan.md  hu-quan.md  huo-bo.md  index.md  ji-baohua.md  ji-lucheng.md  ji-simei.md  li-junwei.md  li-zhenzhen.md  lin-defu.md  liu-xiangyang.md  liu-xinfu.md  liu-zhanwei.md  luo-kai.md  mao-qian.md  mao-xuerui.md  miao-long.md  mo-li.md  publications-index.md  qi-rui.md  sun-shijun.md  sun-yiyong.md  wang-chunyan.md  wang-jianan.md  wang-jiangtao.md  wang-ningfei.md  wang-xueyun.md  wen-qiuqiu.md  wu-yi.md  wu-zhiwei.md  xia-qunli.md  xie-kan.md  (+15 more)
backend/app/corpus/professors/automation/: chai-runqi.md  chai-senchun.md  chen-jie.md  dai-zhongjian.md  dong-lei.md  guo-qiao.md  guo-shuli.md  guo-zehua.md  (+17 more)
backend/evals/: README.md  __init__.py  evaluators.py  generate_mixed_benchmark.py
backend/evals/datasets/: professor_agent_mixed_v1.jsonl
backend/tests/: test_api.py  test_corpus.py  test_eval_dataset.py  test_eval_evaluators.py  test_question_answer_log.py  test_security.py
(+741 files in other folders)
