[project]
name = "lab-4-professor-agent-backend"
version = "0.1.0"
description = "FastAPI and DeepAgents backend for the Lab 4 BIT Professor Agent."
requires-python = ">=3.11"
dependencies = [
    "deepagents==0.5.3",
    "fastapi[standard]==0.136.1",
    "uvicorn[standard]==0.46.0",
    "langchain==1.2.15",
    "langchain-openai==1.2.1",
    "langgraph==1.1.9",
    "pydantic==2.13.3",
    "pydantic-settings==2.14.0",
    "python-dotenv==1.2.2",
]

[project.optional-dependencies]
test = [
    "httpx==0.28.1",
    "pytest==9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
